k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: prod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: node-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: printfworld/nagp-gke-devops-api:v5
        ports:
        - containerPort: 3000
